--- a/Index.html
+++ b/Index.html
@@ -6,11 +6,253 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Assignment-1</title>
+
+    <link rel="stylesheet" href="./bootstrap.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <!-- Nab bar -->
-    <nav class="navbar sticky-top ">
-
+    <!-- 6. Nav bar -->
+    <nav class="navbar sticky-top bg-white shadow">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <b>Tahin18t</b>
+            </a>
+            <div class="navbar">
+                <ul class="navbar-nav small fw-bolder flex-row">
+                    <li class="nav-item"><a class="nav-link active" href="#">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
+                </ul>
+            </div>
+        </div>
     </nav>
+
+    <!-- 2. Button -->
+    <div class="container">
+        <div class="row align-content-center m-5">
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-secondary" type="button">Button 1</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-primary" type="button">Button 2</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-success" type="button">Button 3</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-info" type="button">Button 4</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-warning" type="button">Button 5</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-danger" type="button">Button 6</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-dark" type="button">Button 7</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-light border-bottom border-start" type="button">Button 8</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-outline-primary rounded-start-circle" type="button">Button 9</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-outline-secondary rounded-bottom-pill pt-0 pb-3" type="button">Button 10</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-outline-success rounded-end-circle" type="button">Button 11</button></div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 p-1"><button class="btn btn-outline-danger rounded-circle" type="button">Button 12</button></div>
+        </div>
+    </div>
+
+
+    <!-- 3. Card -->
+    <div class="container">
+        <div class="card rounded-3 m-4 bg-primary-subtle">
+            <div class="row g-md-5 card-body">
+                <div class="col-12 col-md-4 card-body">
+                    <img class="img-fluid shadow-sm" src="./Screenshot%202024-08-20%20204143.png" alt="THis is card image">
+                </div>
+                <div class="col-md-8 col-12">
+                    <div class="mt-md-4 mt-2">
+                        <h5 class="card-title text-primary fw-bolder underline"><u>this is responsive</u></h5>
+                        <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae copariatur?</p>
+                        <span class="text-muted small"><i>- This is the first assignment</i></span>
+                        <button class="card-img-bottom bg-primary text-light fw-bolder"> button</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="card" style="width: 18rem;">
+            <img src="./Screenshot%202024-08-20%20204143.png" class="card-img-top" alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <a href="#" class="btn btn-primary">button</a>
+            </div>
+        </div>
+
+    </div>
+    <br><br><br><br>
+
+
+
+
+    <!-- 4. Form -->
+    <form class="">
+        <div class="container border rounded-2 p-4 m-md-auto">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="text-center">Sign-Up</h1>
+                    <br>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-md-6">
+                    <label for="f_name" class="form-label mt-3">First Name</label>
+                    <input type="text" class="form-control" id="f_name" placeholder="Enter your first name">
+                </div>
+                <div class="col-12 col-md-6">
+                    <label for="l_name" class="form-label mt-3">First Name</label>
+                    <input type="text" class="form-control" id="l_name" placeholder="Enter your last name">
+                </div>
+                <div class="col-10 col-sm-8 col-md-4">
+                    <label for="Username" class="form-label mt-3">Username</label>
+                    <div class="input-group">
+                        <span class="input-group-text">@</span>
+                        <input type="text" class="form-control" id="Username" placeholder="Username" aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Please choose a username.
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-8">
+                    <label for="Number" class="form-label mt-3">Phone</label>
+                    <div class="input-group">
+                        <span class="input-group-text">+88</span>
+                        <input type="text" class="form-control" id="Number" value="01" aria-describedby="inputGroupPrepend" required>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <label for="email" class="form-label mt-3">E-mail</label>
+                    <input type="text" class="form-control" id="email" placeholder="example@gmail.com">
+                </div>
+                <div class="col-12">
+                    <label for="password" class="form-label mt-3">Password</label>
+                    <input type="password" class="form-control" id="password">
+                </div>
+                <div class="row justify-content-center">
+                    <div class="col-auto">
+                        <button class="mt-4 btn bg-primary text-light shadow" type="submit">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </form>
+
+
+
+
+    <!-- 5. List Group -->
+    <div class="container">
+        <div class="row justify-content-center justify-content-lg-start m-2">
+            <div class="col-lg-6 col-10">
+                <ul class="list-group list-group-item-info">
+                    <li class="list-group-item">Item-1</li>
+                    <li class="list-group-item active">Item-2</li>
+                    <li class="list-group-item">Item-3</li>
+                    <li class="list-group-item">Item-4</li>
+                    <li class="list-group-item">Item-5</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <!-- 7. progress bar -->
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                <div class="progress m-2">
+                    <div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 75%"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+    <!-- 8. Pagination -->
+    <nav aria-label="Page navigation example">
+        <ul class="pagination justify-content-center mt-4">
+            <li class="page-item disabled"><a class="page-link" href="#">Previous</a></li>
+            <li class="page-item active"><a class="page-link" href="#">1</a></li>
+            <li class="page-item"><a class="page-link" href="#">2</a></li>
+            <li class="page-item"><a class="page-link" href="#">3</a></li>
+            <li class="page-item"><a class="page-link" href="#">Next</a></li>
+        </ul>
+    </nav>
+
+
+
+
+    <!-- 9. Table with bootstrap-->
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-8">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">First Name</th>
+                        <th scope="col">Last Name</th>
+                        <th scope="col">Username</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <th scope="row">1</th>
+                        <td>Shahriar</td>
+                        <td>Sakhawat</td>
+                        <td>Tahin18t</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">2</th>
+                        <td>Mahtab</td>
+                        <td>Chowdhary</td>
+                        <td>Mahu17</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">3</th>
+                        <td>Bayazid</td>
+                        <td>Ahmed</td>
+                        <td>Badhon</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- 10. Dropdown with bootstrap-->
+    <div class="container">
+        <div class="row">
+            <div class="col-auto">
+                <div class="dropdown">
+                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        I Learned
+                    </button>
+                    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                        <a class="dropdown-item" href="#">Html</a>
+                        <a class="dropdown-item" href="#">Css</a>
+                        <a class="dropdown-item" href="#">Bootstrap</a>
+                        <a class="dropdown-item" href="#">C</a>
+                        <a class="dropdown-item" href="#">C++</a>
+                        <a class="dropdown-item" href="#">Java</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Footer -->
+    <footer>
+        <div class="row bg-dark justify-content-center text-light p-2 mt-4">
+            <div class="col-auto">
+                <p>&copy; 2024 18t Developer</p>
+            </div>
+        </div>
+    </footer>
+
+
+    <!-- Script -->
+    <script src="./bootstrap.js"></script>
 </body>
 </html>
